# auto_file_classification

./: .gitignore  PROJECT_STRUCTURE.md  README.md  README_OLLAMA_INTEGRATION.md  REVIEW_FEATURE_DOCUMENTATION.md  REVIEW_TEST_ANALYSIS_AND_PLAN.md  project_plan.md  pyproject.toml  requirements.txt  rules.yaml  test_review_functionality.py  test_simple.py  test_stage1_basic.py  基于LLM和向量数据库的自动文档分类系统设计.docx
anthropic/: __init__.py
chromadb/: __init__.py
chromadb/config/: __init__.py
config/: category_mapping.yaml  naming_templates.yaml  rules.yaml
data/llama_index/: index_store.json
docs/: README.md  classification_implementation_summary.md  classification_module.md  embeddings_module.md  index_updater_module.md  naming_module.md  ollama_setup.md  path_planning_module.md  review_functionality.md
examples/: README.md  basic_usage.py  classification_demo.py  embedding_demo.py  index_updater_demo.py  naming_demo.py  path_planning_demo.py
langgraph/: __init__.py  graph.py
llama_index/: __init__.py
llama_index/core/: __init__.py
llama_index/embeddings/: huggingface.py  openai.py
llama_index/vector_stores/: __init__.py  chroma.py
ods/: __init__.py  __main__.py  cli.py
ods/classifiers/: __init__.py  classifier.py  enhanced_classifier.py  llm_classifier.py  ollama_classifier.py  retrieval_agent.py  rule_checker.py
ods/core/: __init__.py  config.py  database.py  enhanced_workflow.py  watcher.py  workflow.py
ods/embeddings/: __init__.py  embedder.py  models.py  text_processor.py
ods/naming/: __init__.py  renamer.py
ods/parsers/: __init__.py  base_parser.py  (+6 more)
openai/: __init__.py
real_test_documents/: 项目进度报告.md
sentence_transformers/: __init__.py
test_documents/: test_config.json  test_data.csv  test_page.html  test_script.py  test_text.txt  valid_test.docx
tests/: test_classifiers.py  test_database.py  test_directory_watcher.py  test_embeddings.py  test_enhanced_classifier.py  test_enhanced_rule_engine.py  test_file_mover.py  test_index_updater.py  test_ollama_integration.py  test_parsers.py  test_path_planner.py  test_renamer.py  test_stage1_e2e.py  test_utils.py
torch/: __init__.py
(+25 files in other folders)
